base/flask-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: flask-backend
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/contents/aws"
spec:
  selector:
    app: flask-backend
  type: NodePort
  ports:
    - port: 8080 
      targetPort: 8080 
      protocol: TCP
