base/nodejs-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nodejs-backend
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/services/all"
spec:
  selector:
    app: nodejs-backend
  type: NodePort
  ports:
    - port: 8080
      targetPort: 3000
      protocol: TCP
